--- a/VRChat/52/1101552.html
+++ b/VRChat/52/1101552.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "iYwgGDQNL41mepNcLzQQcCqaxTOB128tNX07MTzQmoU="></script>
+    "Xrfvt7ZO6eL368hvxc9e+GCNWAyaVBbi67lLLz3bYY4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"テクスチャ素材『VRChatアバター向け瞳パック』","description":"■テクスチャ素材『VRChatアバター向け瞳パック』■\n\n□概要□\nVRChatアバター向けの瞳テクスチャパックです。『アリシア種の猫の子』用設定済みマテリアル同梱（UTS2）\n単体のテクスチャも付属していますので、猫の子以外のアバターにもご利用いただけます。\nこのファイルにはShaderは付属していません。\n(c)Unity Technologies Japan/UCL\n\n3種+1、合計13種類にオッドアイのサンプルが入っています。改変用のPSDデータ付きです。\n\n□導入方法は添付してあるreadmeをご確認ください□\n\n■利用規約■\n再配布、改変共に可能です。\nこの素材を利用してのトラブル等の責任は負いかねますのでご了承ください。","url":"https://booth.pm/ja/items/1101552","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e63ccc03-87f0-44e3-aab3-9463a1329dc3/i/1101552/96fb8a84-2d68-4536-8c33-e150108f047d_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iYwgGDQNL41mepNcLzQQcCqaxTOB128tNX07MTzQmoU="></script>
+    nonce="Xrfvt7ZO6eL368hvxc9e+GCNWAyaVBbi67lLLz3bYY4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -498,9 +498,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
