--- a/VRChat/00/1099900.html
+++ b/VRChat/00/1099900.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "KEyPATD1S49/Qgo/dVuctE0zfiqrFX9A8XEbJu0X29s="></script>
+    "n6HYNOLAb0iHFCsC6TpYd0/y9lzHn/AFQIxB9DaGPO0="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"どこでも3D定規","description":"VRChat対応アイテム「どこでも3D定規」\n\n\nアバターの身長や、ワールドのオブジェクト等の大きさを\n簡単に測れるような定規を3種類ほど作成してみましたので、\nお好みのものをご利用ください。\n\n\nポリゴン数：合計1198\n2M定規細長「meter」：492\n1M定規細長「meter_1m」：378\n2M定規幅広「meter_2m」：328\n","url":"https://booth.pm/ja/items/1099900","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/a2bf9907-a323-492b-a7ce-a665215736f7/i/1099900/cc3f3a4e-19cc-47e3-9341-d13e8bdac80b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="KEyPATD1S49/Qgo/dVuctE0zfiqrFX9A8XEbJu0X29s="></script>
+    nonce="n6HYNOLAb0iHFCsC6TpYd0/y9lzHn/AFQIxB9DaGPO0="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -169,7 +169,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      773
+                                      774
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -185,7 +185,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      773
+                                      774
                                     </div>
                                   </div></a>
                                 </div>
@@ -474,9 +474,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
